--- a/arch/arm64/configs/dreamlte_defconfig
+++ b/arch/arm64/configs/dreamlte_defconfig
@@ -403,13 +403,13 @@ CONFIG_HMP_FREQUENCY_INVARIANT_SCALE=y
 CONFIG_SCHED_HMP_TASK_BASED_SOFTLANDING=y
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
-CONFIG_TIMA=y
+# CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
-CONFIG_TIMA_RKP=y
+# CONFIG_TIMA_RKP is not set
 # CONFIG_TIMA_RKP_DEBUG is not set
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
+# CONFIG_RKP_KDP is not set
+# CONFIG_RKP_NS_PROT is not set
+# CONFIG_RKP_DMAP_PROT is not set
 # CONFIG_RKP_6G is not set
 CONFIG_RELOCATABLE_KERNEL=y
 
@@ -1223,7 +1223,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_HP_ILO is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1780 is not set
@@ -1239,7 +1239,7 @@ CONFIG_KNOX_KAP=y
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
 CONFIG_EXYNOS_IMA=y
-CONFIG_TIMA_LOG=y
+# CONFIG_TIMA_LOG is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1443,7 +1443,7 @@ CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_MQ_DEFAULT is not set
 # CONFIG_DM_DEBUG is not set
-CONFIG_DM_BUFIO=y
+# CONFIG_DM_BUFIO is not set
 CONFIG_DM_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_THIN_PROVISIONING is not set
@@ -1456,7 +1456,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
