--- a/arch/arm64/configs/dreamlte_defconfig
+++ b/arch/arm64/configs/dreamlte_defconfig
@@ -4662,7 +4662,7 @@ CONFIG_SENSORS_SSP_LPS22H=y
 # CONFIG_SENSORS_SSP_IRLED is not set
 CONFIG_SENSORS_HRMSENSOR=y
 CONFIG_SENSORS_HRM_MAX86902=y
-# CONFIG_SENSORS_HRM_ADPD143 is not set
+CONFIG_SENSORS_HRM_ADPD143=y
 CONFIG_SENSORS_HRM_MAX869_ENHANCED_EOL=y
 # CONFIG_SENSOR_SSP_PROXIMTY_FOR_WINDOW_TYPE is not set
 # CONFIG_SENSORS_ADPD142 is not set
